--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advent Calendar 2023</title>
+    <title>Adventskalender 2024</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <main id="app">
       <div id="home-page" class="page">
         <div class="input-container">
-          <h1>Advent Calendar 2023</h1>
+          <h1>Adventskalender 2024</h1>
           <input 
             type="text" 
             id="keyword-input" 
-            placeholder="Enter keyword in capital letters"
+            placeholder="Stichwort eingeben..."
             autocomplete="off"
           >
         </div>
@@ -22,7 +22,7 @@
       <div id="detail-page" class="page hidden">
         <div class="detail-container">
           <div class="calendar-day">
-            <div class="calendar-month">Dec</div>
+            <div class="calendar-month">Dez</div>
             <div class="calendar-number" id="day"></div>
           </div>
           <h3 id="organization"></h3>
@@ -30,7 +30,7 @@
           <div id="donation-visual" class="donation-visual">
             <div class="donation-amount">10 €</div>
             <div class="donation-label">
-              Donated with <span class="heart-icon">♥</span> in your name
+              Gespendet mit ❤️ in Deinem Namen
             </div>
           </div>
           <a id="website" target="_blank" rel="noopener noreferrer"></a>
