--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
       <div id="home-page" class="page">
         <div class="input-container">
           <h1>Adventskalender 2024</h1>
-          <input 
-            type="text" 
-            id="keyword-input" 
-            placeholder="Stichwort eingeben..."
-            autocomplete="off"
-          >
+          <div class="input-wrapper">
+            <input 
+              type="text" 
+              id="keyword-input" 
+              placeholder="Stichwort eingeben..."
+              autocomplete="off"
+            >
+            <button id="submit-btn" class="submit-btn">OK</button>
+          </div>
         </div>
       </div>
       <div id="detail-page" class="page hidden">
