--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="calendar-month">Dez</div>
             <div class="calendar-number" id="day"></div>
           </div>
+          <div id="personal-message" class="personal-message"></div>
           <h3 id="organization"></h3>
           <p id="description"></p>
           <div id="donation-visual" class="donation-visual">
